2005-09-08  Osmo Salomaa  otsaloma@cc.hut.fi

	* data/glade/prefs-dialog.glade: Changed encoding preferences.

2005-09-08  Osmo Salomaa  otsaloma@cc.hut.fi

	* data/glade/encoding-dialog.glade:
	  data/glade/insertsub-dialog.glade:
	  data/glade/multiclose-dialog.glade:
	  Minor fixes.

	* data/glade/language-dialog.glade:
	  data/ui/menubar.xml:
	  Terminology fixes.

	* data/glade/prefs-dialog.glade:
	  Added a notebook. Added file preferences.

	* data/glade/spellcheck-dialog.glade:
	  New file to replace spellcheck-window.glade. Fixed alingments.

	* data/glade/spellcheck-window.glade:
	  Removed in favor of spellcheck-dialog.glade.

2005-09-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* ChangeLog: Forgot to commit this.

2005-09-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/data.py: Fixed imports. Minor fixes.

	* lib/gaupol/base/delegates/__init__.py:
	  lib/gaupol/base/files/__init__.py:
	  lib/gaupol/base/tags/__init__.py:
	  Cleared in favor of classes.py modules.

	* lib/gaupol/base/delegates/analyzer.py:
	  lib/gaupol/base/delegates/delegate.py:
	  lib/gaupol/base/delegates/editor.py:
	  lib/gaupol/base/delegates/filereader.py:
	  lib/gaupol/base/delegates/filewriter.py:
	  lib/gaupol/base/delegates/frconv.py:
	  lib/gaupol/base/files/microdvd.py:
	  lib/gaupol/base/files/mpl2.py:
	  lib/gaupol/base/files/subrip.py:
	  lib/gaupol/base/tags/microdvd.py:
	  lib/gaupol/base/tags/mpl2.py:
	  lib/gaupol/base/timing/calc.py:
	  lib/gaupol/base/util/encodinglib.py:
	  lib/gaupol/base/util/internet.py:
	  lib/gaupol/base/util/langlib.py:
	  Minor fixes.

	* lib/gaupol/base/delegates/classes.py:
	  lib/gaupol/base/files/classes.py:
	  lib/gaupol/base/tags/classes.py:
	  New files for importing all classes.

	* lib/gaupol/base/delegates/formatter.py: Made use of TextParser. Minor
	  fixes.

	* lib/gaupol/base/files/determiner.py: Minor fixes.
	  (FileFormatError): Renamed from UnknownFileFormatError.

	* lib/gaupol/base/text/parser.py: