@@ -82,7 +82,7 @@ class AboutDialog(gtk.AboutDialog):
 
         lang = locale.getdefaultlocale()[0]
 
-        # lang is xx_YY. Try that first, if no luck get translator for xx.
+        # lang is xx_YY. Try that first if no luck get translator for xx.
         try:
             self.set_translator_credits(TRANSLATORS[lang])
         except KeyError:
